# azure-devops-mcp

./: .env.example  README.md  azure_devops_client.py  config.py  epic_hierarchy_exporter.py  main.py  pyproject.toml  server.py
src/: client.py
