[project]
name = "mcp-server-azure-devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "httpx[http2]>=0.27.0",
    "python-dotenv>=1.0.0",
]
